support for steam webhooks and streams and chains